--- a/package.json
+++ b/package.json
@@ -78,15 +78,15 @@
     "lucide-react": "^0.469.0",
     "mammoth": "^1.11.0",
     "marked": "^15.0.4",
-    "next": "15.1.3",
+    "next": "^15.5.7",
     "openai": "^4.77.0",
     "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "pdf.js-extract": "^0.2.1",
     "pdfjs-dist": "4.8.69",
-    "react": "^19.0.0",
+    "react": "^19.2.1",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.5",
     "react-intersection-observer": "^9.15.0",
     "react-markdown": "^9.0.1",
@@ -124,7 +124,7 @@
     "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
-    "eslint-config-next": "15.1.2",
+    "eslint-config-next": "15.5.7",
     "gray-matter": "^4.0.3",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.4.49",
